# raw-qc

./: .gitignore  .gitmodules  .nextflow.log.1  .nextflow.log.2  .nextflow.log.3  .nextflow.log.4  .nextflow.log.5  .nextflow.log.6  .nextflow.log.7  .nextflow.log.8  .nextflow.log.9  CHANGELOG  CHANGELOG.md  CMakeLists.txt  Dockerfile  LICENSE  README.md  Singularity  deploy.sh  environment.yml  install_env.sh  main-template.nf  main.nf  main.nf.orig  nextflow.config  parameters.settings.json  pipeline.conf  raw-qc  raw-qc.sh  requirements.txt  setup.py
assets/: email_template.html  metadata.tsv  multiqcConfig.yaml  multiqc_config.yaml  nfHeader.txt  oncomplete_template.html  oncomplete_template.txt
conf/: atropos.config  base.config  conda.config  containers.config  containers.config.example  curie.config  docker.config  geniac.config  genomes.config  igenomes.config  modules.config  multiconda.config  multipath.config  multiqc_config.yaml  process.config  singularity.config  test.config  tools-path.config  tools-path.config.example
conf/templates/: CMakeLists.txt  cluster.config.in  containers.config.in
config/: config.json  rawqc_config.json
doc/: installation.md  usage.md
docs/: README.md  geniac.md  installation.md  output.md  problems.md  profiles.md  referenceGenomes.md  reference_genomes.md  troubleshooting.md  usage.md
install/: cmake-init.cmake
modules/: CMakeLists.txt
raw-qc_snakemake/: bcl_to_fastq_rule  check_fastq_length.sh  check_fastq_length_rule  check_rawqc.rule  check_rawqc.sh  config_raw-qc.yaml  config_rawqc_copy.rule  fill_raw-qc_pipeline_config_snakemake.sh  manage_undetermined_fastq_rule  merge_fastq_loop_rule  raw-qc_outputs_list.txt  raw-qc_workflow.conf  raw-qc_workflow_launcher.sh  rawqc_pipeline.rule  rims_metadata_launcher.rule  rims_metadata_parser.py  rims_metadata_parser_conf.py  rims_metadata_parser_launcher.sh  samplesheet_checker_rule  samplesheet_copy_rule  samplesheet_to_sampleDescription.py  samplesheet_to_sampledescription_rule  samplesheet_to_sampleplan.rule  samplesheet_to_sampleplan_converter.py  snakefile_kdi_rawqc  snakefile_preprocessing_rawqc  snakefile_rawqc_pipeline  (+2 more)
raw_qc/: fastq.py  (+2 more)
(+114 files in other folders)
